<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hex_ros_arm_comp</name>
  <version>0.0.0</version>
  <description>Gravity compensation demo for the Archer Y6 arm</description>
  <maintainer email="dzr159@gmail.com">Dong Zhaorui</maintainer>
  <license>Apache-2.0</license>

  <depend condition="$ROS_VERSION == 1">rospy</depend>
  <depend condition="$ROS_VERSION == 2">rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>hex_ros_msgs</depend>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
